fixed a bug where the logo wasn't visible on mobile

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header nav {
     align-items: center;
 }
 
-header nav :not(img) {
+header nav > :not(:has(img)) {
     display: none;
 }
 
